[package]
name = "benoop"
version = "0.1.0"
authors = ["Gerard Abelló Serras <gerardabello@gmail.com>"]
edition = "2018"
repository = "https://github.com/gerardabello/benoop/"
license = "MIT"
description = "Benchmarking tool for servers, focused on providing fast development feedback loop."

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
bincode = "1.3.2"
crossbeam-channel = "0.4"
rand = "0.8.0"
clap = "3.0.0-beta.2"
colored = "2"
thiserror = "1.0"
